--- a/Pages/Agendamento.html
+++ b/Pages/Agendamento.html
@@ -20,6 +20,25 @@
     window.hora = "";
 
     window.onload = function () {
+      let isAdmin = localStorage.getItem("Auth") === "gestor";
+      let isUser = localStorage.getItem("Auth") === "user";
+
+      if (isAdmin) {
+        let navOptions = document.getElementById("nav-options");
+        let newOption = document.createElement("li");
+        newOption.innerHTML = `<a href="Gerenciamento.html">Gerenciamento</a>`;
+        navOptions.appendChild(newOption);
+      }
+
+      if (isAdmin || isUser) {
+        let logoutHref = document.getElementById("logout");
+        let logoutIcon = document.createElement("div");
+        logoutIcon.classList.add("mdi", "mdi-logout");
+
+        logoutIcon.onclick = logout;
+        logoutHref.appendChild(logoutIcon);
+      }
+
       if (!localStorage["Auth"]) {
         document.location.href = "./Login.html";
         return;
@@ -31,6 +50,11 @@
         .getElementById("data")
         .setAttribute("min", new Date().toISOString().split("T")[0]);
     };
+
+    function logout() {
+      localStorage.removeItem("Auth");
+      window.location.href = "Login.html";
+    }
 
     function Agendar(nomeServico) {
       let agendamentosStr = "agendamentos";
@@ -108,48 +132,27 @@
   </script>
 
   <body class="body">
-    <nav class="navbar navbar-expand-lg" id="Nav">
-      <div class="container-fluid">
-        <a class="navbar-brand" id="Link" href="../Pages/Index.html"
-          ><img src="../Assets/logo1.png" alt="" id="imgLogo"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav" id="NavLink">
-            <a
-              class="nav-link active"
-              id="Link"
-              aria-current="page"
-              href="Index.html"
-              >Home</a
-            >
-            <a class="nav-link active" id="Link" href="Servico.html"
-              >Serviços</a
-            >
-            <a class="nav-link active" id="Link" href="./Index.html#faleconosco"
-              >Fale Conosco</a
-            >
-          </div>
-          <a class="navbar-brand" id="Link" href="#"
-            ><img src="../Assets/logout2.png" alt="Logout" id="logoutBtn"
-          /></a>
-        </div>
+    <nav class="navbar">
+      <a href="Index.html">
+        <img class="logo" src="../Assets/logo1.png" />
+      </a>
+
+      <div class="nav-options-container">
+        <ul id="nav-options" class="navbar-options">
+          <li><a href="Index.html">Home</a></li>
+          <li><a href="Servico.html">Serviços</a></li>
+          <li><a href="#faleconosco">Fale Conosco</a></li>
+        </ul>
+        <a href="Login.html">
+          <i style="font-size: 1.3rem" class="mdi mdi-account"></i>
+        </a>
+        <a id="logout" href="Login.html"> </a>
       </div>
     </nav>
     <br />
     <br />
-    <h2 id="Title1">Agende seu Serviço</h2>
-    <div class="container overflow-hidden text-center">
+    <h2 style="text-align: center; color: white">Agende seu Serviço</h2>
+    <div class="container overflow-hidden">
       <div class="row gx-5">
         <div class="col">
           <div class="p-3">
@@ -194,14 +197,6 @@
             <div class="card" id="Form2">
               <h5 class="card-header" id="header-servico"></h5>
               <div class="card-body">
-                <!-- <label for="tipo-servico" class="form-label">Tipo de serviço</label>
-              <select class="form-select mb-3" id="tipo-servico" required>
-                <option value="">Selecione o tipo de serviço</option>
-                <option value="Lavagem externa">Lavagem externa</option>
-                <option value="Lavagem interna">Lavagem interna</option>
-                <option value="Polimento">Polimento</option>
-              </select> -->
-
                 <label for="detalhes-carro" class="form-label"
                   >Detalhes adicionais do carro</label
                 >
